# pronto

./: .gitignore  LICENSE  MANIFEST.in  README.md  SCHEMA.md  config.cfg  pronto.py  pyproject.toml  requirements.txt  setup.py  xref.py
pronto/: __init__.py  api.py  auth.py  db.py  filters.py  utils.py  views.py  xref.py
pronto.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pronto/api/: __init__.py  annotation.py  database.py  databases.py  entries.py  interproscan.py  protein.py  proteome.py  search.py  signature.py  single_dom.py  single_dom_debug.py  taxon.py
pronto/static/: app.js  comments.js  config.js  database.js  database2.js  descriptions.js  entry.js  enzymes.js  events.js  go.js  header.js  index.js  matches.js  matrices.js  method.js  protein.js  search.js  signatures.js  style.css  taxonomy.js  ui.js  uitoolbox.js  utils.js  utilsold.js
pronto/templates/: checks.html  comments.html  database.html  database2.html  database_integrated.html  database_unintegrated.html  descriptions.html  entry.html  enzymes.html  footer.html  go.html  header.html  index.html  literature.html  login.html  matches.html  matrices.html  method.html  methods.html  prediction.html  protein.html  proteome.html  sanitychecks.html  search.html  signature.html  single_dom.html  taxon.html  (+2 more)
scripts/: README.md  cdd_names.toml  create_ai_entries.py  utilities.py
static/: app.js  style.css
templates/: __enzymes.html  __taxonomy.html  descriptions.html  footer.html  go.html  header.html  login.html  main.html  matches.html  matrices.html  swissprot_comments.html  taxonomy.html
(+162 files in other folders)
