[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pronto"
version = "2.13.0"
description = "InterPro curation system"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "flask~=2.3",
    "mysqlclient~=2.2",
    "oracledb~=2.4",
    "psycopg[binary]~=3.1",
]
